--- a/challenge_1/package.json
+++ b/challenge_1/package.json
@@ -18,6 +18,7 @@
     "json-server": "^0.14.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-paginate": "^6.3.0",
     "react-router-dom": "^4.3.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
