--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -16,8 +16,10 @@
     "@babel/preset-react": "^7.0.0",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
+    "chart.js": "^1.1.1",
     "express": "^4.16.4",
     "react": "^16.8.4",
+    "react-chartjs": "^1.2.0",
     "react-dom": "^16.8.4",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
