--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -18,6 +18,8 @@
     "babel-loader": "^8.0.5",
     "bluebird": "^3.5.3",
     "express": "^4.16.4",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
   }
