--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-react": "^7.0.0",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
+    "babel-polyfill": "^6.26.0",
     "bluebird": "^3.5.3",
     "express": "^4.16.4",
     "react": "^16.8.4",
